--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".MainActivity"
+            android:name=".activity.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -16,6 +16,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <service android:name=".activity.RecordNewSpeakerIntentService"
+            android:exported="false">
+        </service>
+        <receiver android:name=".activity.ListenModeTask">
+        </receiver>
     </application>
 
     <uses-permission android:name="android.permission.RECORD_AUDIO"/>
